--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "liveServer.settings.useLocalIp": true,
-    "liveServer.settings.NoBrowser": true
+    "liveServer.settings.CustomBrowser": "chrome",
+    "liveServer.settings.port": 5501
 }
